// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCleanPasswords should get correct clean passwords 1`] = `
[
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 5,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$mard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "Pau$m4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 6,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$nnard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "password": "Pau$nn4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 7,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$mard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "Pa|_|$m4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 8,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$nnard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$nn4rd",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 5,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4u$mard",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "P4u$m4rd",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 6,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4u$nnard",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "password": "P4u$nn4rd",
  },
  {
    "changes": [
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 7,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4|_|$mard",
  },
  {
    "changes": [
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "P4|_|$m4rd",
  },
  {
    "changes": [
      {
        "i": 8,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4|_|$nnard",
  },
  {
    "changes": [],
    "password": "P4|_|$nn4rd",
  },
]
`;

exports[`getCleanPasswords should limit the substitutions correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 0,
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "password": "w",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple symbols correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "@",
      },
      {
        "i": 4,
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "password": "pacific",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "@",
      },
    ],
    "password": "paciﬁc",
  },
  {
    "changes": [
      {
        "i": 4,
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "password": "p@cific",
  },
  {
    "changes": [],
    "password": "p@ciﬁc",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple variants correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 0,
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "password": "w",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "uf",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uu",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "fv",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uv",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "vf",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "vu",
  },
  {
    "changes": [],
    "password": "vv",
  },
]
`;
